# brainstorming-agent-v2

./: .env  .env.example  .gitignore  Makefile  PRD.txt  README.md  code_agent.py  langgraph.json  main.py  pyproject.toml  testing.py
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
scripts/: setup_resources.py
src/: agent.py  subagents.py
src/config/: settings.py
src/middleware/: errors.py  model_selector.py  todo.py
src/routes/: chat.py
src/schemas/: prd.py
src/tools/: __init__.py  bash.py  current_time.py  http_request.py  memory.py  prd.py  web_search.py
src/tools/prd/: __init__.py  create_prd.py  update_prd.py
src/utils/: checkpointer.py  request_context.py  stream_response.py
src/utils/prompts/: prd.py
src/utils/supabase/: client.py  save_prd.py
