[project]
name = "brainstorming-agent-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.33",
    "langchain-tavily>=0.2.11",
    "langgraph>=0.6.7",
    "langgraph-checkpoint-postgres>=2.0.23",
    "langgraph-cli[inmem]>=0.4.2",
    "langmem>=0.0.29",
    "numpy>=2.3.3",
    "psycopg[binary,pool]>=3.2.10",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
    "termcolor>=3.1.0",
]
